# LibreService

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  casdoorConf.toml  certificates.yaml  configmap-dev.yaml  deployment.yaml  develop.pem  docker-compose.yml  init.sql  package-lock.json  secret-dev.yaml  service.yaml  testEpub.sql
docs/: auth_api.md  user_api.md
docs/.vitepress/: config.mts
openapi/v1/: book.yaml
src/: casdoor.rs  error.rs  lib.rs  main.rs  routes.rs  schema.rs  util.rs
src/controller/: auth_controller.rs  book_controller.rs  mod.rs  test.rs
src/controller/book/: list.rs  mod.rs
src/controller/epub/: epub_controller.rs  mod.rs
src/controller/v1/book/: mod.rs
src/database/: error.rs  mod.rs  schema.rs
src/models/: book.rs  common.rs  mod.rs
src/models/epub/: chapters.rs  epub.rs  mod.rs  recourses.rs
tests/: integration_tests.rs
