[package]
name = "libre_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
uuid = "0.8"
derive_more = "0.99.17"
chrono = { version = "0.4", features = ["serde"] }
actix-multipart = "0.7.2"
epub = "2.1.2"
[dev-dependencies]
actix-rt = "2.5"
